# crunchydl

./: .gitignore  CNAME  Cargo.toml  README.md  crates.js  help.html  index.html  settings.html  src-files.js
cli/: Cargo.toml
cli/src/: app.rs  catalog.rs  command.rs  commands.rs  config.rs  error.rs  main.rs  presentation.rs  queue.rs  thumbnail.rs  tui.rs  ui.rs
cli/src/app/: auth.rs  config.rs  paths.rs  queue.rs  thumbnail.rs
cli/src/commands/: args.rs  dispatch.rs
cli/src/commands/dispatch/: catalog.rs  config.rs  download.rs  drm.rs  queue_runner.rs
cli/src/ui/: presentation.rs  tui.rs
cli/src/ui/presentation/: text.rs
cli/src/ui/tui/: app.rs  events.rs  input.rs  lifecycle.rs  model.rs  render.rs  terminal.rs
cli/src/ui/tui/app/: navigation.rs  queue.rs  selection.rs  settings.rs
cli/src/ui/tui/input/: catalog.rs  global.rs  queue.rs
cli/src/ui/tui/render/: catalog.rs  chrome.rs  dialog.rs  queue.rs  selection.rs  settings.rs
crunchydl/: all.html  enum.ApiErrorKind.html  enum.AudioSelection.html  enum.BatchError.html  enum.CatalogImageKind.html  enum.CatalogKind.html  enum.CatalogRating.html  enum.CdnSelection.html  enum.ChapterSelection.html  enum.CollectionTarget.html  enum.Container.html  enum.ContentType.html  enum.DownloadEvent.html  enum.DownloadWarning.html  enum.DrmCapability.html  enum.DrmSystem.html  enum.EncryptionScheme.html  enum.Error.html  enum.FallbackPolicy.html  enum.FontPolicy.html  enum.HardSubSelection.html  enum.JobState.html  enum.MediaKind.html  enum.MediaRequest.html  enum.MediaTarget.html  enum.OverwritePolicy.html  enum.PlannedTrackKind.html  enum.QualitySelection.html  enum.RetentionPolicy.html  enum.SelectionError.html  enum.SubtitleFormat.html  enum.SubtitleLocales.html  enum.VideoSelection.html  fn.acquire_track_keys.html  fn.canonicalize_episode_batch.html  fn.inspect_encryption.html  fn.locale_display_name.html  fn.process_subtitle.html  fn.resolve_referenced_fonts.html  fn.select_audio.html  (+75 more)
drm/: Cargo.toml  all.html  enum.ContentType.html  enum.EncryptionScheme.html  enum.Error.html  fn.acquire_track_keys.html  fn.inspect_encryption.html  index.html  sidebar-items.js  struct.CencDecrypter.html  struct.ContentKey.html  struct.DrmRequest.html  struct.EncryptionInfo.html  struct.KeyId.html  struct.KeySet.html  struct.LicenseRequest.html  struct.LicenseResponse.html  struct.PlayReadyProvider.html  struct.WidevineProvider.html  trait.DrmProvider.html  trait.LicenseTransport.html  type.BoxFuture.html
drm/cenc/: enum.EncryptionScheme.html  fn.inspect_encryption.html  struct.CencDecrypter.html  struct.EncryptionInfo.html
drm/error/: enum.Error.html
drm/key/: struct.ContentKey.html  struct.KeyId.html  struct.KeySet.html
drm/license/: enum.ContentType.html  fn.acquire_track_keys.html  struct.DrmRequest.html  struct.LicenseRequest.html  struct.LicenseResponse.html  trait.DrmProvider.html  trait.LicenseTransport.html  type.BoxFuture.html
drm/playready/: struct.PlayReadyProvider.html
drm/src/: cenc.rs  error.rs  key.rs  lib.rs  license.rs  playready.rs  widevine.rs
drm/src/cenc/: boxes.rs
drm/tests/: cenc.rs  key.rs  license.rs
drm/widevine/: struct.WidevineProvider.html
matroska/: Cargo.toml  all.html  enum.Error.html  enum.TrackCodec.html  enum.TrackSettings.html  enum.TrackType.html  index.html  sidebar-items.js  struct.Attachment.html  struct.AudioSettings.html  struct.Chapter.html  struct.Language.html  struct.MuxOptions.html  struct.Muxer.html  struct.Packet.html  struct.Track.html  struct.VideoSettings.html
matroska/attachment/: struct.Attachment.html
matroska/block/: fn.group.html  index.html  sidebar-items.js
matroska/chapter/: struct.Chapter.html
matroska/ebml/: fn.id_bytes.html  fn.size_bytes.html  index.html  sidebar-items.js
matroska/error/: enum.Error.html
matroska/muxer/: struct.MuxOptions.html  struct.Muxer.html  struct.Packet.html
matroska/src/: attachment.rs  block.rs  chapter.rs  cue.rs  ebml.rs  element.rs  error.rs  lib.rs  muxer.rs  seek.rs  track.rs
matroska/src/muxer/: helpers.rs
matroska/tests/: block.rs  ebml.rs  muxer.rs
matroska/track/: enum.TrackCodec.html  enum.TrackSettings.html  enum.TrackType.html  struct.AudioSettings.html  struct.Language.html  struct.Track.html  struct.VideoSettings.html
media/: Cargo.toml  all.html  enum.Codec.html  enum.Error.html  enum.TrackKind.html  index.html  sidebar-items.js  struct.Edit.html  struct.FragmentedMp4.html  struct.Packet.html  struct.PacketIter.html  struct.Probe.html  struct.TimeBase.html  struct.Timestamp.html  struct.Track.html
search.index/: 00e3ca0a76.js  00fb55c67c.js  0104b6d6c4.js  016cc2802a.js  016d18d607.js  017ee375d4.js  0194d78ad3.js  01abf01983.js  01f6721506.js  (+216 more)
(+474 files in other folders)
