[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "crunchydl"
path = "src/main.rs"
doc = false

[lints]
workspace = true

[features]
default = ["drm-playready"]
drm-playready = ["crunchydl/drm-playready"]
drm-widevine = ["crunchydl/drm-widevine"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
crunchydl = { version = "0.1.0", path = ".." }
crunchyroll-rs = { version = "0.18.0", default-features = false, features = ["parse"] }
directories = "6.0.0"
futures-util = "0.3.32"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
indicatif = "0.18.4"
keyring = "4.1.4"
ratatui = "0.30.2"
ratatui-image = { version = "11.0.6", features = ["crossterm"], default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream"] }
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1.1.2"
uuid = { version = "1.23.5", features = ["v4", "serde"] }
zeroize = "1.9.0"
